--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ license = "MIT"
 [dependencies]
 getopts = "0.2.21"
 crypto = "0.5.1"
+tokio = { version = "1", features = ["full"] }
 rand = "0.8.5"
 hex = "0.4.2"
 smoltcp = "0.10.0"
