--- a/RouterOs-Swarm/haproxy.cfg
+++ b/RouterOs-Swarm/haproxy.cfg
@@ -7,7 +7,6 @@ defaults
     timeout client 30s
     timeout server 30s
     log global
-    mode http
    
 listen stats
     bind *:8404
@@ -16,18 +15,23 @@ listen stats
     stats refresh 5s
 
 frontend main
-    bind *:80
-    default_backend account-microservices
+    mode tcp
+    bind :2000
+    default_backend swarm-nodes
 
-backend account-microservices
+backend swarm-nodes
     balance leastconn
-    mode http
-    server manager1 192.168.99.100:80
-    server worker-1 192.168.99.102:80
-    server worker-2 192.168.99.103:80
+    mode tcp
+    server manager1 192.168.99.100:2000 check port 2000
+    server worker-1 192.168.99.102:2000 check port 2000
+    server worker-2 192.168.99.103:2000 check port 2000
 
-
-
+director web 10.0.0.3:2001-2256 UDP
+  balance leastconn
+  mode nat
+  server manager1 192.168.99.100:2001-2256 weight 10 check
+  server worker-1 192.168.99.102:2001-2256 weight 10 check
+  server worker-2 192.168.99.103:2001-2256 weight 10 check
 
     
 
